tests/snapshots/tui__debit_credit_view.snap
---
source: tests/tui.rs
expression: output
---
"╔ Files ════════════════════╗┌ hustle.csv ──────────────┐┌ 2024 ─────────────────────┐"
"║ expenses.csv              ║│▎2024        4.00 | -3.00 ││ January 10           4.00 │"
"║ income.csv                ║│                          ││▎January 20          -3.00 │"
"║ savings.csv               ║│                          ││                           │"
"║▌hustle.csv   4.00 | -3.00 ║│                          ││                           │"
"║                           ║│                          ││                           │"
"║                           ║│                          ││                           │"
"║                           ║│                          ││                           │"
"║                           ║│                          ││                           │"
"║                           ║│                          ││                           │"
"║                           ║│                          ││                           │"
"║                           ║│                          ││                           │"
"║                           ║│                          ││                           │"
"║                           ║│                          ││                           │"
"║                           ║│                          ││                           │"
"║                           ║│                          ││                           │"
"╚═══════════════════════════╝└──────────────────────────┘└───────────────────────────┘"
"┌────────────────────────────────────────────────────────────────────────────────────┐"
"│↓(j)/↑(k): Navigate | Tab: Focus | n/e: New/Edit Entry | m: Mode | q: Quit          │"
"└────────────────────────────────────────────────────────────────────────────────────┘"
