tests/snapshots/tui__edit_entry_popup.snap
---
source: tests/tui.rs
expression: edit_popup_output
---
Buffer {
    area: Rect { x: 0, y: 0, width: 86, height: 20 },
    content: [
        "┌ Files ────────────────────┐┌ expenses.csv ─────────────┐╔ 2025 ════════════════════╗",
        "│▎expenses.csv      -251.50 ││ 2024              -175.75 │║▌2025-01-05        -75.75 ║",
        "│ income.csv                ││▎2025               -75.75 │║                          ║",
        "│ savings.csv               ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                ┌ Edit Entry ──────────────────────────────────────┐                ║",
        "│                │File: expenses.csv                                │                ║",
        "│                │                                                  │                ║",
        "│                │Date: 2025-01-05                                  │                ║",
        "│                │Amount: -75.75                                    │                ║",
        "│                │                                                  │                ║",
        "│                │                                                  │                ║",
        "│                └──────────────────────────────────────────────────┘                ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "└───────────────────────────┘└───────────────────────────┘╚══════════════════════════╝",
        "┌────────────────────────────────────────────────────────────────────────────────────┐",
        "│Tab: Switch Field | Enter: Save | q: Cancel                                         │",
        "└────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 65, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Rgb(35, 39, 48), underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Green, bg: Rgb(26, 30, 36), underline: Reset, modifier: NONE,
        x: 60, y: 1, fg: Reset, bg: Rgb(26, 30, 36), underline: Reset, modifier: NONE,
        x: 85, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: Reset, bg: Rgb(35, 39, 48), underline: Reset, modifier: NONE,
        x: 57, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: White, bg: Black, underline: Reset, modifier: BOLD,
        x: 30, y: 6, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 18, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 68, y: 9, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 13, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
