tests/snapshots/tui__focus_year_details.snap
---
source: tests/tui.rs
expression: details_output
---
Buffer {
    area: Rect { x: 0, y: 0, width: 86, height: 20 },
    content: [
        "┌ Files ────────────────────┐┌ expenses.csv ─────────────┐╔ 2025 ════════════════════╗",
        "│▎expenses.csv      -251.50 ││ 2024              -175.75 │║▌2025-01-05        -75.75 ║",
        "│ income.csv                ││▎2025               -75.75 │║                          ║",
        "│ savings.csv               ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "│                           ││                           │║                          ║",
        "└───────────────────────────┘└───────────────────────────┘╚══════════════════════════╝",
        "┌────────────────────────────────────────────────────────────────────────────────────┐",
        "│↓(j)/↑(k): Navigate | Tab: Focus | a: Add Entry | e: Edit Entry | q: Quit           │",
        "└────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 65, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Rgb(35, 39, 48), underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Green, bg: Rgb(26, 30, 36), underline: Reset, modifier: NONE,
        x: 60, y: 1, fg: Reset, bg: Rgb(26, 30, 36), underline: Reset, modifier: NONE,
        x: 85, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: Reset, bg: Rgb(35, 39, 48), underline: Reset, modifier: NONE,
        x: 57, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
